<resources>

    <!-- Calories -->
    <string name="app_name">Running App</string>
    <string name="calories_weight">Height</string>
    <string name="calories_height">Weight</string>
    <string name="calories_age">Age</string>
    <string name="calories_male">Male</string>
    <string name="calories_female">Female</string>
    <string name="calories_duration">Duration</string>
    <string name="calories_button_label_calculate">Calculate</string>
    <string name="calories_weight_unit">kg</string>
    <string name="calories_height_unit">cm</string>
    <string name="calories_age_unit">year</string>
    <string name="calories_duration_unit">min</string>
    <string name="calories_burned">Burned</string>
    <string name="calories_needed">Needed</string>
    <string name="calories_error_message">Wrong values</string>

    <!-- Main -->

    <string name="main_button_label_calories">Calculate calories</string>
    <string name="main_button_label_browse">Browse routes</string>
    <string name="main_navigation_label_routes">Routes</string>
    <string name="main_navigation_label_calories">Calories</string>

    <!-- Route -->

    <string name="route_button_label_description">Description</string>
    <string name="route_button_label_location">Location</string>
    <string name="route_toolbar_label">Walking Routes</string>
    <string name="calories_toolbar_label">Calories Calculator</string>
    <string name="workout_toolbar_label">Workouts</string>
    <string name="main_button_label_workouts">Workouts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="workout_create_date">Date</string>
    <string name="workout_create_label">Label</string>
    <string name="workjout_create_distance">Distance</string>
    <string name="workout_create_duration">Duration</string>
    <string name="workout_toolbar_create_label">New Toolbar</string>


    <!-- Workout -->

    <string name="workout_create_error_empty">Empty field</string>
    <string name="workout_options_menu_sort_label">"Sort"</string>
    <string name="start">Create</string>
    <string name="start_text">Start</string>

</resources>